# poolesville-hackathon

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: lint.yml
MAP/: example.html  flaskmap.py  index.html  simple.html  simple.py  style.css
src/: DBApi.py  DBObjects.py  DBmodifier.py  Database.py  DatabaseCreate.py  __init__.py  app.py  main.py  requirements.txt  weather_information.py
src/static/: criticalupdates.css  login.css  sample.json  script.js  stylesheet.css
src/templates/: critical-updates.html  index.html  loadavg.html  login.html  make_a_report.html  page2.html  reports.html  signup.html
