[tool.poetry]
name = "poolesville-hackathon"
version = "1.0.0"
description = "Our group's solution for the poolesville_hacks hackathon."
authors=["Shayaan Wadkar", "Saraansh Wadkar", "Rehan Kabir"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^3.9.2"
isort = "^5.9.3"
pre-commit = "^2.15.0"
taskipy = "^1.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
start = "poetry run python -m src"
lint = "poetry run flake8"
format = "poetry run black . && poetry run isort ."
pre-commit = "poetry run pre-commit install"
